Refined update-server XSL to handle Listener already exists

--- a/.ebextensions/01-option-settings.config
+++ b/.ebextensions/01-option-settings.config
@@ -4,6 +4,7 @@ option_settings:
     - namespace: aws:elb:policies
       option_name: Stickiness Policy
       value: true
+    # This doesn't have any effect as I think the blank URL from the GUI overrides anything we set here
     - namespace: aws:elasticbeanstalk:application
       option_name: Application Healthcheck URL
       value: /camunda/lib/require.js
