Added managed actions enablement
Minor patches
Applied at 10PM Saturday

--- a/.ebextensions/01-option-settings.config
+++ b/.ebextensions/01-option-settings.config
@@ -8,6 +8,20 @@ option_settings:
     - namespace: aws:elasticbeanstalk:application
       option_name: Application Healthcheck URL
       value: /camunda/lib/require.js
+    - namespace: aws:elasticbeanstalk:managedactions
+      option_name: ManagedActionsEnabled
+      value: true
+    - namespace: aws:elasticbeanstalk:managedactions
+      option_name: PreferredStartTime
+      # Note this is UTC time (local time is 10PM Saturday)
+      value: Sat:12:00
+    - namespace: aws:elasticbeanstalk:managedactions:platformupdate
+      option_name: UpdateLevel
+      value: minor
+    - namespace: aws:elasticbeanstalk:managedactions:platformupdate
+      option_name: InstanceRefreshEnabled
+      value: false
+    # Tomcat options
     - namespace: aws:elasticbeanstalk:container:tomcat:jvmoptions
       option_name: Xmx
       value: 256m
