Update hosts file with local server name

--- a/.ebextensions/01-option-settings.config
+++ b/.ebextensions/01-option-settings.config
@@ -7,7 +7,7 @@ option_settings:
     # This doesn't have any effect as I think the blank URL from the GUI overrides anything we set here
     - namespace: aws:elasticbeanstalk:application
       option_name: Application Healthcheck URL
-      value: /camunda/lib/require.js
+      value: /camunda/lib/require.jspp
     - namespace: aws:elasticbeanstalk:managedactions
       option_name: ManagedActionsEnabled
       value: true
