--- a/.ebextensions/02-set-environment.config
+++ b/.ebextensions/02-set-environment.config
@@ -13,11 +13,17 @@ files:
       f.write('\nexport TOMCAT_CONF=/etc/tomcat8\n');
       f.write('\nexport TOMCAT_HOME=/usr/share/tomcat8\n');
 commands:
-    01-extract-ebextensions:
+    # Need to add an entry for this server in the hosts file, as we are using the AP DNS which doesn't know about
+    # this server.  Without this, java InetAddress.getLocalHost() won't work
+    01-backup-hosts:
+        command: "cp -n /etc/hosts /etc/hosts.orig ; cp /etc/hosts.orig /etc/hosts"
+    02-fix-hosts:
+        command: "echo $(ifconfig eth0 | awk '/inet addr/{print substr($2,6)}')     $HOSTNAME >> /etc/hosts ; cat /etc/hosts"
+    03-extract-ebextensions:
         command: "unzip -o $(/opt/elasticbeanstalk/bin/get-config container -k source_bundle) .ebextensions/*  -d /tmp"
-    02-generate-environment-from-eb-config:
+    04-generate-environment-from-eb-config:
         command: "/opt/elasticbeanstalk/bin/get-config environment ; /opt/elasticbeanstalk/bin/get-config optionsettings ;rm /tmp/eb_env.sh ; /opt/elasticbeanstalk/bin/get-config environment | python /tmp/extractEnvironment.py"
-    03-generate-environment-make-executable:
+    05-generate-environment-make-executable:
         command: "chmod +x /tmp/eb_env.sh"
-    04-check-environment:
+    06-check-environment:
         command: "source /tmp/eb_env.sh ; echo Checking environment ; cat /tmp/eb_env.sh ; printf '\n'; echo environment=$AP_ENV"
