Added New Relic configuration

--- a/.ebextensions/01-option-settings.config
+++ b/.ebextensions/01-option-settings.config
@@ -30,6 +30,15 @@ option_settings:
       value: 128m
     - namespace: aws:elasticbeanstalk:container:tomcat:jvmoptions
       option_name: JVM Options
-      value: -XX:+UseConcMarkSweepGC
+      value: -XX:+UseConcMarkSweepGC -javaagent:/usr/share/tomcat8/newrelic/newrelic.jar
     - option_name: ap.env
       value: infra
+    - option_name: newrelic.environment
+      value: infra
+    # Note: Changing the New Relic agent_enabled flag through the console only takes immediate effect for the java
+    #       agent.  The linux agent requires the application to be re-deployed or the box to be rebuilt for this to take
+    #       effect.
+    - option_name: newrelic.config.agent_enabled
+      value: true
+    - option_name: newrelic.config.license_key
+      value: changemebutimustbeexactly40charactersnow
