--- a/.ebextensions/02-set-environment.config
+++ b/.ebextensions/02-set-environment.config
@@ -27,3 +27,6 @@ commands:
         command: "chmod +x /tmp/eb_env.sh"
     06-check-environment:
         command: "source /tmp/eb_env.sh ; echo Checking environment ; cat /tmp/eb_env.sh ; printf '\n'; echo environment=$AP_ENV"
+    07-configure-yum:
+        # yum http cache seems to get corrupted every month which stops build
+        command: "echo http_caching=none >> /etc/yum.conf"
