--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
     <properties>
         <org.camunda.bpm.version>7.5.0</org.camunda.bpm.version>
+        <newrelic-agent-version>3.30.1</newrelic-agent-version>
     </properties>
     <dependencies>
         <!-- Need to install camunda distribution into maven so we can include it as a dependency -->
@@ -53,6 +54,13 @@
             <artifactId>loan-approval</artifactId>
             <version>0.1.0-SNAPSHOT</version>
             <type>war</type>
+        </dependency>
+
+        <dependency>
+            <groupId>com.newrelic</groupId>
+            <artifactId>newrelic</artifactId>
+            <version>${newrelic-agent-version}</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
