Added Sumo Logic configuration

--- a/.ebextensions/01-option-settings.config
+++ b/.ebextensions/01-option-settings.config
@@ -42,3 +42,7 @@ option_settings:
       value: true
     - option_name: newrelic.config.license_key
       value: changemebutimustbeexactly40charactersnow
+    - option_name: sumo.accessid
+      value: changeme
+    - option_name: sumo.accesskey
+      value: changeme
